@@ -22,6 +22,7 @@ series:
     - focal
     - jammy
     - centos7
+    - centos8
 
 provides:
   slurmd:
