@@ -1,4 +1,4 @@
 ops==1.3.0
 urllib3==1.26.9
 etcd3gw==1.0.2
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.13
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@ASP-3526_add_rocky
