@@ -20,6 +20,7 @@ series:
     - focal
     - jammy
     - centos7
+    - centos8
 
 provides:
   slurmrestd:
